<resources>
    <string name="app_name">Now Playing Log</string>
    <string name="title_all_songs" translatable="false">Home</string>
    <string name="title_map" translatable="false">Map</string>
    <string name="title_settings" translatable="false">Settings</string>

    <string name="settings_general_title" translatable="false">General</string>

    <string name="settings_map_key" translatable="false">settings_map_location_checkbox</string>
    <string name="settings_map_title">Where was that song?</string>
    <string name="settings_map_enabled_summary" translatable="false">Map and Location Enabled</string>
    <string name="settings_map_disabled_summary" translatable="false">Map and Location Disabled</string>

    <string name="settings_music_player_key" translatable="false">settings_music_player</string>
    <string name="settings_music_player_title" translatable="false">Music Player (Optional)</string>

    <string name="settings_google_drive_backup_key" translatable="false">settings_google_drive_backup</string>
    <string name="settings_google_drive_backup_title" translatable="false">Backup To Google Drive</string>

    <string name="settings_scrobble_app_key" translatable="false">settings_scrobble_app</string>
    <string name="settings_scrobble_app_title" translatable="false">Enable Scrobbling</string>
    <string name="settings_scrobble_app_summary" translatable="false">Requires \"Simple Last.fm Scrobbler\"</string>

    <string name="settings_dark_theme_key" translatable="false">settings_map_dark_theme_checkbox</string>
    <string name="settings_dark_theme_title" translatable="false">Enable Dark Theme</string>
    <string name="settings_dark_theme_enabled_summary" translatable="false">Dark Theme Enabled</string>
    <string name="settings_dark_theme_disabled_summary" translatable="false">Dark Theme Disabled</string>

    <string name="google_maps_key" translatable="false">AIzaSyB_fGqsb1AJmf6A52ENKOmL-Xms8hSzY3E</string>
    <string name="file_create_error" translatable="false">Unable to create Google Drive backup file</string>

    <string name="enable_notification_listener_title">Please Enable Notification Access</string>
    <string name="enable_notification_listener_message">Now Playing Log requires Notification Access to watch
        for the \'Google Now Playing\' notification. Please enable it in Settings.</string>

    <string name="enable_scrobble_app_title" translatable="false">Requires \"Simple Last.fm Scrobbler\"</string>
    <string name="enable_scrobble_app_message" translatable="false">This requires the free app \"Simple Last.fm Scrobbler\" from the Play Store to be installed.</string>

    <string name="delimiter"> by </string>
</resources>
