<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_general_title"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="?attr/icon_drawable_map"
            android:key="@string/settings_map_key"
            android:summary="@string/settings_map_enabled_summary"
            android:summaryOff="@string/settings_map_disabled_summary"
            android:summaryOn="@string/settings_map_enabled_summary"
            android:title="@string/settings_map_title"/>
        <ListPreference
            android:defaultValue="default"
            android:dialogIcon="@drawable/ic_radio_black_48dp"
            android:entries="@array/music_players"
            android:entryValues="@array/music_players_value"
            android:icon="@drawable/ic_headset_black_48dp"
            android:key="@string/settings_music_player_key"
            android:title="@string/settings_music_player_title"/>
        <Preference
            android:title="@string/settings_google_drive_backup_title"
            android:key="@string/settings_google_drive_backup_key"
            android:summary=""
            android:icon="@drawable/ic_backup_black_48dp"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_timeline_black_48dp"
            android:key="@string/settings_scrobble_app_key"
            android:summary="@string/settings_scrobble_app_summary"
            android:title="@string/settings_scrobble_app_title"/>
    </PreferenceCategory>
</PreferenceScreen>